--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </select>
 
           <button class="sortButton" id="sortButton">Сортировать</button>
+          <button class="stopButton" id="stopButton">Остановить</button>
         </div>
         <div id="visualization"></div>
       </div>
